# responsive_map_arranger

./: CMakeLists.txt  France REL.json  France datavalues - area.json  README.md  UK REL.json  UK datavalues - area.json  USA REL.json  settings.json  vcpkg.json
data/France/: France REL.json  france-colored-gradient.ipe
data/USA/: USA REL.json  USA datavalues - area.json  states_colored_gradient.ipe
data/uk/: UK REL.json  UK-regions-gradient.ipe
frontend/: CMakeLists.txt
frontend/rectangular_cartogram_gui/: CMakeLists.txt  rectangular_cartogram_gui.cpp  rectangular_cartogram_gui.h
